--- a/home.html
+++ b/home.html
@@ -135,7 +135,7 @@
 							<p>You can search for your course here </p>
 							
 							<!-- learning cources list -->
-							<ul class="list-unstyled learning-cources-list text-left">
+							<ul class= "nav navbar-nav navbar-right main-navigation text-uppercase font-lato" >
                                 <li>
                                 <div class="input-group">
 								<input type="text" class="form-control" placeholder="What do you want to learn today?">
@@ -174,9 +174,7 @@
 							     </div>
                                 </li>
 							</ul>
-                             <span class="input-group-btn">
-									<button class="btn btn-warning btn-theme" type="button"><i class="fas fa-search" onclick= "alert('Started search')"></i></button>
-								</span>
+									<button class="btn btn-warning btn-theme" type="button" onclick= "alert('Started search')"><i class="fas fa-search"></i> Search</button>
 						</form>
 					</div>
 				</div>
