--- a/home_ar.html
+++ b/home_ar.html
@@ -138,7 +138,7 @@
 							<p>يمكنك البحث عن الكورس المطلوب هنا </p>
 							
 							<!-- learning cources list -->
-							<ul class="list-unstyled learning-cources-list text-left">
+							<ul class="nav navbar-nav navbar-right main-navigation text-uppercase font-lato">
                                 <li>
                                 <div class="input-group">
 								<input type="text" class="form-control" placeholder="بماذا ترغب فى التعلم اليوم?">
@@ -177,9 +177,7 @@
 							     </div>
                                 </li>
 							</ul>
-                            	<span class="input-group-btn">
-									<button class="btn btn-warning btn-theme" type="button"><i class="fas fa-search" onclick="alert('تم البحث')"></i></button>
-								</span>
+									<button class="btn btn-warning btn-theme" type="button" onclick="alert('تم البحث')"><i class="fas fa-search"></i> أبحث </button>
 						</form>
 					</div>
 				</div>
